cmake_minimum_required(VERSION 3.17)
project(c__primer)

set(CMAKE_CXX_STANDARD 20)

add_executable(lc844 stack/lc844.cpp)
## 遍历项目根目录下所有的 .cpp 文件
#file (GLOB files *.cpp)
#foreach (file ${files})
#    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
#    add_executable (${exe} ${file})
#    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
#endforeach ()
add_executable(lc1410 string/lc1410.cpp)
add_executable(lc1358 hash/lc1358.cpp)
add_executable(lc1411 dp/lc1411.cpp)
add_executable(lc907 Monotone-stack/lc907.cpp)
add_executable(lc721 unionfind/lc721.cpp)
add_executable(lc905 twopointer/lc905.cpp)
add_executable(lc906 math/lc906.cpp)
add_executable(lc42 Monotone-stack/lc42.cpp)
add_executable(lc84 Monotone-stack/lc84.cpp)
add_executable(lc739 Monotone-stack/lc739.cpp)
add_executable(lc1128 hash/lc1128.cpp)
add_executable(lc1260 Array/lc1260.cpp)
add_executable(lc1262 dp/lc1262.cpp)
add_executable(lc1363 dp/lc1363.cpp)
add_executable(lc1276 greedy/lc1276.cpp)
add_executable(lc1278 dp/lc1278.cpp)
add_executable(lc1288 greedy/lc1288.cpp)
add_executable(lc1579 unionfind/lc1579.cpp)
add_executable(lc1269 dp/lc1269.cpp)
add_executable(lc1233 string/lc1233.cpp)
add_executable(lc1234 slidingwindows/lc1234.cpp)
add_executable(lc1235 dp/lc1235.cpp)
add_executable(lc1248 twopointer/lc1248.cpp)
add_executable(lc1250 math/lc1250.cpp)
add_executable(lc1249 stack/lc1249.cpp)
add_executable(lc1275 Array/lc1275.cpp)
add_executable(lc1247 greedy/lc1247.cpp)
add_executable(lc724 Array/lc724.cpp)
add_executable(lcp19 dp/lcp19.cpp)

add_executable(lc967 dfs/lc967.cpp)
add_executable(lc1631 unionfind/lc1631.cpp)
add_executable(lc778 unionfind/lc778.cpp)
add_executable(lc30 slidingwindows/lc30.cpp)
add_executable(lc76 slidingwindows/lc76.cpp)
add_executable(lc239 slidingwindows/lc239.cpp)
add_executable(lc1371 slidingwindows/lc1371.cpp)
add_executable(Trie design/Trie.cpp)
add_executable(lc1004 slidingwindows/lc1004.cpp)
add_executable(lc893 unionfind/lc893.cpp)
add_executable(lc5654 weekcontest/week226/lc5654.cpp)
add_executable(lc5665 weekcontest/week226/lc5665.cpp)
add_executable(lc5667 weekcontest/week226/lc5667.cpp)
add_executable(lc5666 weekcontest/week226/lc5666.cpp)
add_executable(lc888 Array/lc888.cpp)
add_executable(lc1739 binarysearch/lc1739.cpp)
add_executable(lc1674 scanLine/lc1674.cpp)
add_executable(lc781 math/lc781.cpp)

add_executable(lc424 slidingwindows/lc424.cpp)
add_executable(lc438 slidingwindows/lc438.cpp)
add_executable(lc3 slidingwindows/lc3.cpp)
add_executable(lc904 slidingwindows/lc904.cpp)
add_executable(lc930 slidingwindows/lc930.cpp)
add_executable(lc992 slidingwindows/lc992.cpp)
add_executable(lc1626 dp/lc1626.cpp)
add_executable(lc1639 dp/lc1639.cpp)
add_executable(lc1641 dp/lc1641.cpp)
add_executable(lc1713 dp/lc1713.cpp)
add_executable(lc300 dp/lc300.cpp)
add_executable(lc1189 hash/lc1189.cpp)
add_executable(lc1191 dp/lc1191.cpp)
add_executable(lc1200 Array/lc1200.cpp)
add_executable(lc1201 binarysearch/lc1201.cpp)
add_executable(lc1186 dp/lc1186.cpp)
add_executable(lc1681 dp/lc1681.cpp)
add_executable(lc480 slidingwindows/lc480.cpp)
add_executable(lc295 heap/lc295.cpp)
add_executable(lc357 backtrack/lc357.cpp)
add_executable(lc526 backtrack/lc526.cpp)
add_executable(lc691 backtrack/lc691.cpp)
add_executable(lc1219 backtrack/lc1219.cpp)
add_executable(lc1307 backtrack/lc1307.cpp)
add_executable(lc1291 backtrack/lc1291.cpp)
add_executable(lc1240 backtrack/lc1240.cpp)
add_executable(lc1239 backtrack/lc1239.cpp)
add_executable(lc643 slidingwindows/lc643.cpp)
add_executable(lc306 backtrack/lc306.cpp)