cmake_minimum_required(VERSION 3.17)
project(c__primer)

set(CMAKE_CXX_STANDARD 20)

add_executable(lc844 stack/lc844.cpp)
## 遍历项目根目录下所有的 .cpp 文件
#file (GLOB files *.cpp)
#foreach (file ${files})
#    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
#    add_executable (${exe} ${file})
#    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
#endforeach ()
add_executable(lc1410 string/lc1410.cpp)
add_executable(lc1358 hash/lc1358.cpp)
add_executable(lc1411 dp/lc1411.cpp)
add_executable(lc907 Monotone-stack/lc907.cpp)
add_executable(lc721 unionfind/lc721.cpp)
add_executable(lc905 twopointer/lc905.cpp)
add_executable(lc906 math/lc906.cpp)
add_executable(lc42 Monotone-stack/lc42.cpp)
add_executable(lc84 Monotone-stack/lc84.cpp)
add_executable(lc739 Monotone-stack/lc739.cpp)
add_executable(lc1128 hash/lc1128.cpp)
add_executable(lc1260 Array/lc1260.cpp)
add_executable(lc1262 dp/lc1262.cpp)
add_executable(lc1363 dp/lc1363.cpp)
add_executable(lc1276 greedy/lc1276.cpp)
add_executable(lc1278 dp/lc1278.cpp)
add_executable(lc1288 greedy/lc1288.cpp)
add_executable(lc1579 unionfind/lc1579.cpp)
add_executable(lc1269 dp/lc1269.cpp)
add_executable(lc1233 string/lc1233.cpp)
add_executable(lc1234 slidingwindows/lc1234.cpp)
add_executable(lc1235 dp/lc1235.cpp)
add_executable(lc1248 twopointer/lc1248.cpp)
add_executable(lc1250 math/lc1250.cpp)
add_executable(lc1249 stack/lc1249.cpp)
add_executable(lc1275 Array/lc1275.cpp)
add_executable(lc1247 greedy/lc1247.cpp)
add_executable(lc724 Array/lc724.cpp)
add_executable(lcp19 dp/lcp19.cpp)

add_executable(lc967 dfs/lc967.cpp)
add_executable(lc1631 unionfind/lc1631.cpp)
add_executable(lc778 unionfind/lc778.cpp)
add_executable(lc30 slidingwindows/lc30.cpp)
add_executable(lc76 slidingwindows/lc76.cpp)
add_executable(lc239 slidingwindows/lc239.cpp)
add_executable(lc1371 slidingwindows/lc1371.cpp)
add_executable(Trie design/Trie.cpp)
add_executable(lc1004 slidingwindows/lc1004.cpp)
add_executable(lc893 unionfind/lc893.cpp)
add_executable(lc5654 weekcontest/week226/lc5654.cpp)
add_executable(lc5665 weekcontest/week226/lc5665.cpp)
add_executable(lc5667 weekcontest/week226/lc5667.cpp)
add_executable(lc5666 weekcontest/week226/lc5666.cpp)
add_executable(lc888 Array/lc888.cpp)
add_executable(lc1739 binarysearch/lc1739.cpp)
add_executable(lc1674 scanLine/lc1674.cpp)
add_executable(lc781 math/lc781.cpp)

add_executable(lc424 slidingwindows/lc424.cpp)
add_executable(lc438 slidingwindows/lc438.cpp)
add_executable(lc3 slidingwindows/lc3.cpp)
add_executable(lc904 slidingwindows/lc904.cpp)
add_executable(lc930 slidingwindows/lc930.cpp)
add_executable(lc992 slidingwindows/lc992.cpp)
add_executable(lc1626 dp/lc1626.cpp)
add_executable(lc1639 dp/lc1639.cpp)
add_executable(lc1641 dp/lc1641.cpp)
add_executable(lc1713 dp/lc1713.cpp)
add_executable(lc300 dp/lc300.cpp)
add_executable(lc1189 hash/lc1189.cpp)
add_executable(lc1191 dp/lc1191.cpp)
add_executable(lc1200 Array/lc1200.cpp)
add_executable(lc1201 binarysearch/lc1201.cpp)
add_executable(lc1186 dp/lc1186.cpp)
add_executable(lc1681 dp/lc1681.cpp)
add_executable(lc480 slidingwindows/lc480.cpp)
add_executable(lc295 heap/lc295.cpp)
add_executable(lc357 backtrack/lc357.cpp)
add_executable(lc526 backtrack/lc526.cpp)
add_executable(lc691 backtrack/lc691.cpp)
add_executable(lc1219 backtrack/lc1219.cpp)
add_executable(lc1307 backtrack/lc1307.cpp)
add_executable(lc1291 backtrack/lc1291.cpp)
add_executable(lc1240 backtrack/lc1240.cpp)
add_executable(lc1239 backtrack/lc1239.cpp)
add_executable(lc643 slidingwindows/lc643.cpp)
add_executable(lc306 backtrack/lc306.cpp)
add_executable(lc1208 slidingwindows/lc1208.cpp)
add_executable(lc383 string/lc383.cpp)
add_executable(lc338 bit/lc338.cpp)
add_executable(lc368 dp/lc368.cpp)
add_executable(lc474 dp/lc474.cpp)
add_executable(lc1423 slidingwindows/lc1423.cpp)
add_executable(lc740 dp/lc740.cpp)
add_executable(lc718 dp/lc718.cpp)
add_executable(lc689 dp/lc689.cpp)
add_executable(lc664 dp/lc664.cpp)
add_executable(lc264 dp/lc264.cpp)
add_executable(lc646 dp/lc646.cpp)
add_executable(jz14-1 dp/jz14-1.cpp)
add_executable(lc1105 dp/lc1105.cpp)
add_executable(lc546 dp/lc546.cpp)
add_executable(lc1370 string/lc1370.cpp)
add_executable(lc1588 Array/lc1588.cpp)
add_executable(lc709 string/lc709.cpp)
add_executable(lc804 string/lc804.cpp)
add_executable(lc1512 hash/lc1512.cpp)
add_executable(lc1217 greedy/lc1217.cpp)
add_executable(lc5657 weekcontest/Dweek45/lc5657.cpp)
add_executable(lc5658 weekcontest/Dweek45/lc5658.cpp)
add_executable(lc5660 weekcontest/Dweek45/lc5660.cpp)
add_executable(lc5659 weekcontest/Dweek45/lc5659.cpp)
add_executable(lc665 Array/lc665.cpp)
add_executable(lc5672 weekcontest/week227/lc5672.cpp)
add_executable(lc5674 weekcontest/week227/lc5674.cpp)
add_executable(lc5673 weekcontest/week227/lc5673.cpp)
add_executable(lc5675 weekcontest/week227/lc5675.cpp)
add_executable(lc321 dp/lc321.cpp)
add_executable(lc978 dp/lc978.cpp)
add_executable(lc1755 divideAndConquer/lc1755.cpp)
add_executable(lc1529 greedy/lc1529.cpp)
add_executable(lc638 dp/lc638.cpp)
add_executable(lc943 dp/lc943.cpp)
add_executable(lc1494 dp/lc1494.cpp)
add_executable(lc1723 dp/lc1723.cpp)
add_executable(lc698 dp/lc698.cpp)
add_executable(lc793 binarysearch/lc793.cpp)
add_executable(lc1642 binarysearch/lc1642.cpp)
add_executable(lc1170 binarysearch/lc1170.cpp)
add_executable(lc1300 binarysearch/lc1300.cpp)
add_executable(lc1691 dp/lc1691.cpp)
add_executable(lc1488 binarysearch/lc1488.cpp)
add_executable(lc1539 binarysearch/lc1539.cpp)
add_executable(lc567 slidingwindows/lc567.cpp)
add_executable(lc1738 dp/lc1738.cpp)
add_executable(lc1727 Monotone-stack/lc1727.cpp)
add_executable(lc1696 dp/lc1696.cpp)
add_executable(lc1593 backtrack/lc1593.cpp)
add_executable(KthLargest design/KthLargest.cpp)
add_executable(lc1326 dp/lc1326.cpp)
add_executable(lc1690 dp/lc1690.cpp)
add_executable(lc1655 dp/lc1655.cpp)
add_executable(lc1621 dp/lc1621.cpp)
add_executable(lc1595 dp/lc1595.cpp)
add_executable(lc1575 dp/lc1575.cpp)
add_executable(lc1567 dp/lc1567.cpp)
add_executable(lc1553 dp/lc1553.cpp)
add_executable(lc1547 dp/lc1547.cpp)
add_executable(lc1546 dp/lc1546.cpp)
add_executable(lc1531 dp/lc1531.cpp)
add_executable(lc1524 dp/lc1524.cpp)
add_executable(lc1458 dp/lc1458.cpp)
add_executable(lc312 dp/lc312.cpp)
add_executable(lc1000 dp/lc1000.cpp)